hphp/hack/test/typecheck/pipe_ternary_nested_ternary.php.exp
File "pipe_ternary_nested_ternary.php", line 12, characters 17-23:
Invalid argument (Typing[4110])
File "pipe_ternary_nested_ternary.php", line 19, characters 24-29:
Expected string
File "pipe_ternary_nested_ternary.php", line 9, characters 13-13:
But got int
